...
    final bool isNarrowLayout =
        MediaQuery.of(context).size.width < maxScreenWidthCompact;

    return BlocBuilder<FilterListBloc, FilterListState>(
      builder: (BuildContext context, FilterListState state) {
        return Scaffold(
          appBar: const MainAppBar(title: 'Filters'),
          drawer: isNarrowLayout
              ? const ResponsiveNavigationDrawer(selectedIndex: 1)
              : null,
          body: ListView.builder(
            itemCount: state.filterList.length,
            itemBuilder: (BuildContext context, int index) {
...
